--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+<link rel="stylesheet" href="styles.8885429d03178be558e7.css"></head>
 <body class="mat-typography">
   <app-root></app-root>
-</body>
+<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.7cf055dae8b005b519b9.js" defer></script><script src="scripts.74fc0ad72488c2b1d4cb.js" defer></script><script src="main.ceb2194bdc2f7ea800a3.js" defer></script></body>
 </html>
